v2.6 - spacing fixes

--- a/src/scss/_about.scss
+++ b/src/scss/_about.scss
@@ -24,4 +24,9 @@
             }
         }
     }
+
+    p {
+        margin-left: 32px;
+        margin-right: 32px;
+    }
 }
